caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_artifact_name.caffeine
Blueprints for
  * "test":
    Requires { env: String }
    Provides { value: "x" }
